# futoshiki-solver

./: .gitignore  .gitmodules  CMakeLists.txt
cli-app/: CMakeLists.txt
csp-viz/: .code.js.swp  .index.html.swp  code.js  index.html  style.css
futoshiki/: CMakeLists.txt
futoshiki-lib/: CMakeLists.txt
futoshiki-lib/cli-app/: CMakeLists.txt  main.cpp
futoshiki-lib/include/futoshiki/: Cell.hpp  Constraint.hpp  CspSolver.hpp  EqualityConstraint.hpp  Futoshiki.hpp  LatinSquare.hpp
futoshiki-lib/include/futoshiki/utils/: Utils.hpp
futoshiki-lib/src/: CMakeLists.txt  Cell.cpp  Constraint.cpp  EqualityConstraint.cpp  Futoshiki.cpp
futoshiki-lib/tests/: CMakeLists.txt  main.cpp
futoshiki-lib/web-app/: .CMakeLists.txt.swp  main.cpp
futoshiki-solver/: Cell.cpp  Cell.fwd.h  Cell.hpp  Constraint.cpp  Constraint.hpp  ConstraintSatisfactionProblem.cpp  ConstraintSatisfactionProblem.hpp  FutoshikiGame.cpp  FutoshikiGame.hpp  NotEqualConstraint.cpp  NotEqualConstraint.hpp  SingleTargetConstraint.cpp  SingleTargetConstraint.hpp  main.cpp
futoshiki-solver.xcodeproj/: project.pbxproj
futoshiki-solver.xcodeproj/project.xcworkspace/xcuserdata/MaxNoka.xcuserdatad/xcdebugger/: Expressions.xcexplist
futoshiki-solver.xcodeproj/xcshareddata/xcschemes/: futoshiki-solver.xcscheme
futoshiki-solver.xcodeproj/xcuserdata/MaxNoka.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
futoshiki-solver.xcodeproj/xcuserdata/MaxNoka.xcuserdatad/xcschemes/: xcschememanagement.plist
futoshiki-solver/Utils/: utils.cpp  utils.hpp
futoshiki-solver/futoshiki-solver/: .gitignore  Cell.cpp  Cell.hpp  Constraint.fwd.h  Constraint.hpp  ConstraintSatisfactionProblem.cpp  ConstraintSatisfactionProblem.hpp  FutoshikiGame.cpp  FutoshikiGame.hpp  Makefile  NotEqualConstraint.cpp  NotEqualConstraint.hpp  SingleTargetConstraint.cpp  main.cpp  utils.cpp  utils.hpp
futoshiki-solver/futoshiki-solver.xcodeproj/: project.pbxproj
futoshiki-solver/futoshiki-solver.xcodeproj/xcuserdata/MaxNoka.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
futoshiki-solver/futoshiki-solver/Utils/: utils.cpp  utils.hpp
futoshiki/MainFutoshiki/: main.cpp
futoshiki/TestFutoshiki/: main.cpp
futoshiki/WebFutoshiki/: EasyLoggingCrowLogHandler.hpp  main.cpp
futoshiki/conf/: logging.conf
futoshiki/futoshiki/: Cell.cpp  Cell.hpp  Constraint.cpp  Constraint.hpp  ConstraintSatisfactionProblem.cpp  ConstraintSatisfactionProblem.hpp  EqualityConstraint.cpp  EqualityConstraint.hpp  InequalityConstraint.cpp  InequalityConstraint.hpp  LatinSquare.cpp  LatinSquare.hpp  SquareCsp.cpp  SquareCsp.hpp  TwoDimCsp.cpp  TwoDimCsp.hpp  main.cpp
futoshiki/futoshiki-lib/include/futoshiki/: Cell.hpp  Constraint.hpp  ConstraintSatisfactionProblem.hpp  CspBuilder.hpp  CspFactory.hpp  CspSolver.hpp  EqualityConstraint.hpp  Futoshiki.hpp  InequalityConstraint.hpp  LatinSquare.hpp  SquareCsp.hpp  TwoDimCsp.hpp
futoshiki/futoshiki-lib/include/futoshiki/utils/: Utils.hpp
futoshiki/futoshiki-lib/src/: Cell.cpp  Constraint.cpp  ConstraintSatisfactionProblem.cpp  CspBuilder.cpp  CspFactory.cpp  CspSolver.cpp  EqualityConstraint.cpp  Futoshiki.cpp  InequalityConstraint.cpp  LatinSquare.cpp  SquareCsp.cpp  TwoDimCsp.cpp
futoshiki/futoshiki-lib/utils/: easylogging++.cc  utils.cpp
futoshiki/futoshiki.xcodeproj/: project.pbxproj
futoshiki/futoshiki.xcodeproj/project.xcworkspace/xcuserdata/MaxNoka.xcuserdatad/xcdebugger/: Expressions.xcexplist
futoshiki/futoshiki.xcodeproj/xcshareddata/xcschemes/: TestFutoshiki.xcscheme  WebFutoshiki.xcscheme  futoshiki-lib.xcscheme
futoshiki/futoshiki.xcodeproj/xcuserdata/MaxNoka.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
futoshiki/futoshiki.xcodeproj/xcuserdata/MaxNoka.xcuserdatad/xcschemes/: xcschememanagement.plist
futoshiki/futoshiki/utils/: Utils.cpp  Utils.hpp  easylogging++.cc
include/futoshiki/: Cell.hpp  Constraint.hpp  ConstraintSatisfactionProblem.hpp  CspSolver.hpp  InequalityConstraint.hpp  SquareCsp.hpp  TwoDimCsp.hpp
include/futoshiki/utils/: MacroUtils.h
src/: CMakeLists.txt  ConstraintSatisfactionProblem.cpp  CspSolver.cpp  InequalityConstraint.cpp  LatinSquare.cpp  SquareCsp.cpp  TwoDimCsp.cpp
src/utils/: easylogging++.cc
web-app/: CMakeLists.txt  EasyLoggingCrowLogHandler.cpp  EasyLoggingCrowLogHandler.hpp  main.cpp
web-frontend/: config.php  index.php  solve.php
web-frontend/classes/: App.php  Cell.php  Constraint.php  Game.php  Row.php
web-frontend/private/classes/: App.php  Cell.php  Constraint.php  Game.php  Row.php
web-frontend/private/config/: config.php
web-frontend/private/views/templates/: constraint-row-blank.html  game.html  head.html
web-frontend/public/: index.php  solve.php
web-frontend/public/scripts/: main.js
web-frontend/public/styles/: style.css
web-frontend/scripts/: main.js
web-frontend/styles/: arrow.css  style.css
web-frontend/templates/: base-template.html  cell.html  constraint-col.html  constraint-row.html  head.html  row.html
